Fix content alignment in Frost components

--- a/src/components/core/Dropdown.module.css
+++ b/src/components/core/Dropdown.module.css
@@ -3,7 +3,7 @@
   width: 250px;
   /* height: 0; */
   /* overflow: hidden; */
-  border-radius: calc(var(--border-radius) * 0.75);
+  border-radius: calc(var(--border-radius));
   margin-top: 5px;
   z-index: 1000;
 
@@ -11,7 +11,6 @@
   flex-flow: row nowrap;
   align-items: baseline;
 
-  /* padding: 15px 10px; */
   z-index: 1000;
 
   a, button {
