--- a/src/components/core/Frost.module.css
+++ b/src/components/core/Frost.module.css
@@ -3,7 +3,7 @@
   width: 100%; height: 100%;
   
   &.radius {
-    border-radius: var(--border-radius);
+    border-radius: inherit;
   }
 }
 
@@ -33,6 +33,4 @@
   border-radius: inherit;
   background-color: var(--background);
   mask-image: radial-gradient(100% 100% at 0px 0px, #000000e0 0%, #000000e0);
-  
-  padding: 30px 25px;
 }
