--- a/src/components/core/Header.module.css
+++ b/src/components/core/Header.module.css
@@ -6,26 +6,13 @@
   height: 70px;
   z-index: 1000;
   padding-bottom: 0.8px;
-}
 
-.border {
-  position: absolute;
-  top: 0; left: 0;
-  width: 100%; height: 100%;
-  background-color: var(--gray-9);
-  background-clip: content-box;
-}
+  div:last-child {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+    align-items: center;
+  }
 
-.content {
-  position: relative;
-  width: 100%; height: 100%;
-  display: flex;
-  flex-flow: row nowrap;
-  justify-content: space-between;
-  align-items: center;
-
-  padding: 10px 20px;
-  background-color: var(--background-blur);
-  backdrop-filter: blur(5px);
   color: var(--gray-9);
 }
